--- a/.env.staging
+++ b/.env.staging
@@ -18,8 +18,8 @@ AZURE_STORAGE_TABLE_ENDPOINT=https://memealyzerstagingstorage.table.core.windows
 AZURE_TEXT_ANALYTICS_ENDPOINT=https://memealyzerstagingta.cognitiveservices.azure.com/
 FUNCTIONS_ENDPOINT=http://memealyzerstagingfunction.azurewebsites.net
 K8S_CONTEXT=memealyzerstagingaks
-API_ENDPOINT=http://13.66.247.35/
-CONTAINER_TAG=1.0.5
+API_ENDPOINT=
+CONTAINER_TAG=1.0.6
 AZURE_STORAGE_BLOB_CONTAINER_NAME=blobs
 AZURE_STORAGE_QUEUE_NAME=messages
 AZURE_STORAGE_QUEUE_MSG_COUNT=10
