--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ FUNCTIONS_ENDPOINT=http://localhost:3080
 AZURE_FUNCTION_APP_NAME=memealyzerdevfunction
 K8S_CONTEXT=docker-desktop
 #API_ENDPOINT=http://52.250.2.137
-API_ENDPOINT=http://localhost:2080
+API_ENDPOINT=
 #CONTAINER_TAG=1.0.0
 CONTAINER_TAG=1.0.6
 AZURE_STORAGE_BLOB_CONTAINER_NAME=blobs
