--- a/src/net/WebApp/wwwroot/appsettings.json
+++ b/src/net/WebApp/wwwroot/appsettings.json
@@ -1,4 +1,4 @@
 {
-    "API_ENDPOINT": "http://localhost:2080",
-    "FUNCTIONS_ENDPOINT": "http://localhost:3080"
+    "API_ENDPOINT": "",
+    "FUNCTIONS_ENDPOINT": "http://memealyzerstagingfunction.azurewebsites.net"
 }
