Updating with latest tye bits

--- a/.env
+++ b/.env
@@ -14,11 +14,12 @@ AZURE_STORAGE_TABLE_ENDPOINT=https://memealyzerdevstorage.table.core.windows.net
 AZURE_TEXT_ANALYTICS_ENDPOINT=https://memealyzerdevtextanalytics.cognitiveservices.azure.com/
 AZURE_APP_CONFIG_ENDPOINT=https://memealyzerdevappconfig.azconfig.io
 AZURE_CONTAINER_REGISTRY_SERVER=memealyzerdevacr.azurecr.io
-FUNCTIONS_ENDPOINT=http://localhost:3080
+FUNCTIONS_ENDPOINT=
+#FUNCTIONS_ENDPOINT=http://localhost:3000
 AZURE_FUNCTION_APP_NAME=memealyzerdevfunction
 K8S_CONTEXT=docker-desktop
-#API_ENDPOINT=http://52.250.2.137
 API_ENDPOINT=
+#API_ENDPOINT=http://localhost:2000
 #CONTAINER_TAG=1.0.0
 CONTAINER_TAG=1.0.6
 AZURE_STORAGE_BLOB_CONTAINER_NAME=blobs
