--- a/.env.prod
+++ b/.env.prod
@@ -17,7 +17,7 @@ AZURE_CONTAINER_REGISTRY_SERVER=memealyzerprodacr.azurecr.io
 FUNCTIONS_ENDPOINT=http://memealyzerprodfunction.azurewebsites.net
 AZURE_FUNCTION_APP_NAME=memealyzerprodfunction
 K8S_CONTEXT=memealyzerprodaks
-API_ENDPOINT=http://52.156.73.84
+API_ENDPOINT=
 CONTAINER_TAG=1.0.7
 AZURE_STORAGE_BLOB_CONTAINER_NAME=blobs
 AZURE_STORAGE_QUEUE_NAME=messages
