--- a/.env
+++ b/.env
@@ -15,13 +15,13 @@ AZURE_TEXT_ANALYTICS_ENDPOINT=https://memealyzerdevtextanalytics.cognitiveservic
 AZURE_APP_CONFIG_ENDPOINT=https://memealyzerdevappconfig.azconfig.io
 AZURE_CONTAINER_REGISTRY_SERVER=memealyzerdevacr.azurecr.io
 FUNCTIONS_ENDPOINT=
-#FUNCTIONS_ENDPOINT=http://localhost:3000
+#FUNCTIONS_ENDPOINT=http://localhost:3080
 AZURE_FUNCTION_APP_NAME=memealyzerdevfunction
 K8S_CONTEXT=docker-desktop
-API_ENDPOINT=
-#API_ENDPOINT=http://localhost:2000
+#API_ENDPOINT=
+#API_ENDPOINT=http://localhost:2080
 #CONTAINER_TAG=1.0.0
-CONTAINER_TAG=1.0.6
+CONTAINER_TAG=1.0.8
 AZURE_STORAGE_BLOB_CONTAINER_NAME=blobs
 AZURE_STORAGE_QUEUE_NAME=messages
 AZURE_STORAGE_QUEUE_MSG_COUNT=10
