--- a/src/net/Services/Functions/local.settings.json
+++ b/src/net/Services/Functions/local.settings.json
@@ -1,7 +1,7 @@
 {
   "IsEncrypted": false,
   "Values": {
-    "AzureWebJobsStorage": "UseDevelopmentStorage=true",
+    "AzureWebJobsStorage": "UseDevelopmentStorage=true;",
     "FUNCTIONS_WORKER_RUNTIME": "dotnet",
     "ClientSyncQueueConnectionString": ""
   },
