Add some debug helpers

--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ FUNCTIONS_ENDPOINT=
 #FUNCTIONS_ENDPOINT=http://localhost:3080
 AZURE_FUNCTION_APP_NAME=memealyzerdevfunction
 K8S_CONTEXT=docker-desktop
-#API_ENDPOINT=
+API_ENDPOINT=
 #API_ENDPOINT=http://localhost:2080
 #CONTAINER_TAG=1.0.0
 CONTAINER_TAG=1.0.8
