--- a/.env
+++ b/.env
@@ -1,22 +1,14 @@
+BASENAME=memealyzerdev
+
 # TERRAFORM VARIABLES
-TF_VAR_basename=memealyzerdev
+TF_VAR_basename=${BASENAME}
 TF_VAR_location=westus2
 TF_VAR_failover_location=eastus2
 
 # TERRAFORM OUTPUTS
-AZURE_COSMOS_ENDPOINT=https://memealyzerdevcosmosaccount.documents.azure.com:443/
-AZURE_FORM_RECOGNIZER_ENDPOINT=https://memealyzerdevformrecognizer.cognitiveservices.azure.com/
-AZURE_KEYVAULT_ENDPOINT=https://memealyzerdevkeyvault.vault.azure.net/
-AZURE_STORAGE_ACCOUNT_NAME=memealyzerdevstorage
-AZURE_STORAGE_BLOB_ENDPOINT=https://memealyzerdevstorage.blob.core.windows.net/
-AZURE_STORAGE_QUEUE_ENDPOINT=https://memealyzerdevstorage.queue.core.windows.net/
-AZURE_STORAGE_TABLE_ENDPOINT=https://memealyzerdevstorage.table.core.windows.net/
-AZURE_TEXT_ANALYTICS_ENDPOINT=https://memealyzerdevtextanalytics.cognitiveservices.azure.com/
-AZURE_APP_CONFIG_ENDPOINT=https://memealyzerdevappconfig.azconfig.io
-AZURE_CONTAINER_REGISTRY_SERVER=memealyzerdevacr.azurecr.io
 FUNCTIONS_ENDPOINT=
 #FUNCTIONS_ENDPOINT=http://localhost:3080
-AZURE_FUNCTION_APP_NAME=memealyzerdevfunction
+AZURE_FUNCTION_APP_NAME=${BASENAME}function
 K8S_CONTEXT=docker-desktop
 API_ENDPOINT=
 #API_ENDPOINT=http://localhost:2080
@@ -27,12 +19,7 @@ AZURE_STORAGE_QUEUE_NAME=messages
 AZURE_STORAGE_QUEUE_MSG_COUNT=10
 AZURE_STORAGE_QUEUE_RECEIVE_SLEEP=1
 AZURE_STORAGE_TABLE_NAME=images
-AZURE_COSMOS_DB=memealyzer
-AZURE_COSMOS_COLLECTION=images
 AZURE_COSMOS_KEY_SECRET_NAME=CosmosKey
-AZURE_STORAGE_TYPE=COSMOS_SQL
-#AZURE_STORAGE_TYPE=STORAGE_TABLE
-AZURE_STORAGE_KEY_SECRET_NAME=StorageKey
 AZURE_STORAGE_CLIENT_SYNC_QUEUE_NAME=sync
 AZURE_SIGNALR_CONNECTION_STRING_SECRET_NAME=SignalRConnectionString
 AZURE_STORAGE_CONNECTION_STRING_SECRET_NAME=StorageConnectionString
