--- a/.env.prod
+++ b/.env.prod
@@ -1,10 +1,11 @@
+BASENAME=memealyzerprod
+
 # TERRAFORM VARIABLES
 TF_VAR_basename=memealyzerprod
 TF_VAR_location=westus2
 TF_VAR_failover_location=eastus2
 
 # TERRAFORM OUTPUTS
-AZURE_COSMOS_ENDPOINT=https://memealyzerprodcosmosaccount.documents.azure.com:443/
 AZURE_FORM_RECOGNIZER_ENDPOINT=https://memealyzerprodformrecognizer.cognitiveservices.azure.com/
 AZURE_KEYVAULT_ENDPOINT=https://memealyzerprodkeyvault.vault.azure.net/
 AZURE_STORAGE_ACCOUNT_NAME=memealyzerprodstorage
