--- a/.env.staging
+++ b/.env.staging
@@ -1,3 +1,5 @@
+BASENAME=memealyzerstaging
+
 # TERRAFORM VARIABLES
 TF_VAR_basename=memealyzerstaging
 TF_VAR_location=westus2
@@ -7,7 +9,6 @@ TF_VAR_failover_location=eastus2
 AZURE_AKS_CLUSTER_NAME=memealyzerstagingaks
 AZURE_APP_CONFIG_ENDPOINT=https://memealyzerstagingappconfig.azconfig.io
 AZURE_CONTAINER_REGISTRY_SERVER=memealyzerstagingacr.azurecr.io
-AZURE_COSMOS_ENDPOINT=https://memealyzerstagingcosmosaccount.documents.azure.com:443/
 AZURE_FORM_RECOGNIZER_ENDPOINT=https://memealyzerstagingfr.cognitiveservices.azure.com/
 AZURE_FUNCTION_APP_NAME=memealyzerstagingfunction
 AZURE_KEYVAULT_ENDPOINT=https://memealyzerstagingkv.vault.azure.net/
