--- a/.env.staging
+++ b/.env.staging
@@ -8,12 +8,23 @@ TF_VAR_failover_location=eastus2
 # SCRIPT VARS
 AZURE_AKS_CLUSTER_NAME=${BASENAME}aks
 AZURE_FUNCTION_APP_NAME=${BASENAME}function
-K8S_CONTEXT=docker-desktop
-CONTAINER_TAG=1.0.8
+AZURE_CONTAINER_REGISTRY_SERVER=${BASENAME}acr.azurecr.io
+K8S_CONTEXT=${BASENAME}aks
+CONTAINER_TAG=1.0.9
 
 # APP VARS
+
+# FOR FUNCTION APP BINDING
+AZURE_STORAGE_CLIENT_SYNC_QUEUE_NAME=sync
+
+
 FUNCTIONS_ENDPOINT=http://${BASENAME}function.azurewebsites.net
-API_ENDPOINT=
+#API_ENDPOINT=
+
+# FOR LOCAL DEV WITH DOCKER
+#FUNCTIONS_ENDPOINT=http://localhost:3080
+#API_ENDPOINT=http://localhost:2080
+
 MEME_ENDPOINT=https://meme-api.herokuapp.com/gimme/wholesomememes
 #AZURE_STORAGE_TYPE=STORAGE_TABLE
 
