--- a/.env
+++ b/.env
@@ -8,10 +8,14 @@ TF_VAR_failover_location=eastus2
 # SCRIPT VARS
 AZURE_AKS_CLUSTER_NAME=${BASENAME}aks
 AZURE_FUNCTION_APP_NAME=${BASENAME}function
+AZURE_CONTAINER_REGISTRY_SERVER=${BASENAME}acr.azurecr.io
 K8S_CONTEXT=docker-desktop
-CONTAINER_TAG=1.0.8
+CONTAINER_TAG=1.0.9
 
 # APP VARS
+
+# FOR FUNCTION APP BINDING
+AZURE_STORAGE_CLIENT_SYNC_QUEUE_NAME=sync
 
 # FOR LOCAL DEV WITH TYE BECAUSE TYE SUPPORTS LOCAL INGRESS
 FUNCTIONS_ENDPOINT=
