--- a/.github/workflows/tye-configclean-deploy.yml
+++ b/.github/workflows/tye-configclean-deploy.yml
@@ -48,7 +48,7 @@ jobs:
       
     - name: 'Install Tye tools'
       run: |
-        dotnet tool install -g Microsoft.Tye --version "0.5.0-*" --add-source https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet5/nuget/v3/index.json
+        dotnet tool install -g Microsoft.Tye --version "0.6.0-*" --add-source https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet5/nuget/v3/index.json
     
     - name: 'Login to ACR'
       uses: Azure/docker-login@v1
@@ -56,11 +56,7 @@ jobs:
         login-server: ${{ env.AZURE_CONTAINER_REGISTRY_SERVER }}
         username: ${{ env.REGISTRY_USERNAME }}
         password: ${{ env.REGISTRY_PASSWORD }}
-    
-    - name: 'Gen Files'
-      run: |
-        sh $GITHUB_WORKSPACE/pac/net/tye/genfiles.sh
-        sh $GITHUB_WORKSPACE/scripts/genappsettings.sh
+           
     - name: 'Set AKS Cluster'
       uses: Azure/aks-set-context@v1
       with:
@@ -70,7 +66,11 @@ jobs:
 
     - name: 'tye deploy'
       run: |
-        tye deploy $GITHUB_WORKSPACE/pac/net/tye/tye.yaml -v Debug --tags ${{ env.WORKSPACE }}
+        pushd $GITHUB_WORKSPACE/pac/net/tye
+        sh genfiles.sh
+        sh $GITHUB_WORKSPACE/scripts/genappsettings.sh
+        tye deploy tye.yaml -v Debug --tags ${{ env.WORKSPACE }}
+        popd
 
     - name: 'Login via Azure CLI'
       uses: azure/login@v1
