--- a/.github/workflows/tye-staging-deploy.yml
+++ b/.github/workflows/tye-staging-deploy.yml
@@ -16,14 +16,15 @@ env:
   ROOT: ${{ github.workspace }}
   DOTENV_FILENAME: .env.staging
   WORKSPACE: staging
-  AZURE_FUNCTIONAPP_NAME: memealyzerstagingfunction
-  DOTNET_VERSION: '5.0.100-rc.2.20479.15'
-  CONTAINER_TAG: 1.0.${{ github.run_number }}
   AZURE_CONTAINER_REGISTRY_SERVER: memealyzerstagingacr.azurecr.io
   FUNCTIONS_ENDPOINT: http://memealyzerstagingfunction.azurewebsites.net
   REGISTRY_USERNAME: memealyzerstagingacr
   AZURE_AKS_CLUSTER_NAME: memealyzerstagingaks
   AZURE_RESOURCE_GROUP: memealyzerstagingrg
+  AZURE_FUNCTIONAPP_NAME: memealyzerstagingfunction
+  DOTNET_VERSION: '5.0.100'
+  CONTAINER_TAG: 1.0.${{ github.run_number }}
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: './src/net/Services/Functions'    # set this to the path to your web app project, defaults to the repository root
 
 jobs:
   build:
@@ -48,7 +49,7 @@ jobs:
       
     - name: 'Install Tye tools'
       run: |
-        dotnet tool install -g Microsoft.Tye --version "0.5.0-*" --add-source https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet5/nuget/v3/index.json
+        dotnet tool install -g Microsoft.Tye --version "0.6.0-*" --add-source https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet5/nuget/v3/index.json
     
     - name: 'Login to ACR'
       uses: Azure/docker-login@v1
@@ -56,11 +57,7 @@ jobs:
         login-server: ${{ env.AZURE_CONTAINER_REGISTRY_SERVER }}
         username: ${{ env.REGISTRY_USERNAME }}
         password: ${{ env.REGISTRY_PASSWORD }}
-    
-    - name: 'Gen Files'
-      run: |
-        sh $GITHUB_WORKSPACE/pac/net/tye/genfiles.sh
-        sh $GITHUB_WORKSPACE/scripts/genappsettings.sh
+           
     - name: 'Set AKS Cluster'
       uses: Azure/aks-set-context@v1
       with:
@@ -70,7 +67,11 @@ jobs:
 
     - name: 'tye deploy'
       run: |
-        tye deploy $GITHUB_WORKSPACE/pac/net/tye/tye.yaml -v Debug --tags ${{ env.WORKSPACE }}
+        pushd $GITHUB_WORKSPACE/pac/net/tye
+        sh genfiles.sh
+        sh $GITHUB_WORKSPACE/scripts/genappsettings.sh
+        tye deploy tye.yaml -v Debug --tags ${{ env.WORKSPACE }}
+        popd
 
     - name: 'Login via Azure CLI'
       uses: azure/login@v1
@@ -80,7 +81,7 @@ jobs:
     - name: 'Resolve Project Dependencies Using Dotnet'
       shell: bash
       run: |
-        pushd $GITHUB_WORKSPACE/src/net/Services/Functions
+        pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
         dotnet build --configuration Release --output ./output
         popd
 
@@ -89,4 +90,5 @@ jobs:
       id: fa
       with:
         app-name: ${{ env.AZURE_FUNCTIONAPP_NAME }}
-        package: $GITHUB_WORKSPACE/src/net/Services/Functions/output
+        package: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/output'
+
