Init sb/messaging provider add

--- a/.env
+++ b/.env
@@ -27,6 +27,9 @@ API_ENDPOINT=
 
 MEME_ENDPOINT=https://meme-api.herokuapp.com/gimme/wholesomememes
 #AZURE_STORAGE_TYPE=STORAGE_TABLE
+AZURE_MESSAGING_TYPE=SERVICE_BUS_QUEUE
+#AZURE_MESSAGING_TYPE=STORAGE_QUEUE
+
 
 # COSMO EMULATOR
 #AZURE_COSMOS_ENDPOINT=https://localhost:8081/
