get consistent .envs

--- a/.env.prod
+++ b/.env.prod
@@ -26,7 +26,8 @@ API_ENDPOINT=
 
 MEME_ENDPOINT=https://meme-api.herokuapp.com/gimme/wholesomememes
 #AZURE_STORAGE_TYPE=STORAGE_TABLE
-AZURE_MESSAGING_TYPE=SERVICE_BUS_QUEUE
+#AZURE_STORAGE_TYPE=COSMOS_SQL
+#AZURE_MESSAGING_TYPE=SERVICE_BUS_QUEUE
 #AZURE_MESSAGING_TYPE=STORAGE_QUEUE
 
 
