--- a/.env.staging
+++ b/.env.staging
@@ -27,7 +27,8 @@ FUNCTIONS_ENDPOINT=http://${BASENAME}function.azurewebsites.net
 
 MEME_ENDPOINT=https://meme-api.herokuapp.com/gimme/wholesomememes
 #AZURE_STORAGE_TYPE=STORAGE_TABLE
-AZURE_MESSAGING_TYPE=SERVICE_BUS_QUEUE
+#AZURE_STORAGE_TYPE=COSMOS_SQL
+#AZURE_MESSAGING_TYPE=SERVICE_BUS_QUEUE
 #AZURE_MESSAGING_TYPE=STORAGE_QUEUE
 
 
