Init sb/messaging provider add (#36)
* Init sb/messaging provider add

* Add tf, fix cr comments

* better message design, dispose

* opt images

* get consistent .envs

--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ CONTAINER_TAG=1.0.9
 # APP VARS
 
 # FOR FUNCTION APP BINDING
-AZURE_STORAGE_CLIENT_SYNC_QUEUE_NAME=sync
+AZURE_CLIENT_SYNC_QUEUE_NAME=sync
 
 # FOR LOCAL DEV WITH TYE BECAUSE TYE SUPPORTS LOCAL INGRESS
 FUNCTIONS_ENDPOINT=
@@ -27,6 +27,10 @@ API_ENDPOINT=
 
 MEME_ENDPOINT=https://meme-api.herokuapp.com/gimme/wholesomememes
 #AZURE_STORAGE_TYPE=STORAGE_TABLE
+#AZURE_STORAGE_TYPE=COSMOS_SQL
+#AZURE_MESSAGING_TYPE=SERVICE_BUS_QUEUE
+#AZURE_MESSAGING_TYPE=STORAGE_QUEUE
+
 
 # COSMO EMULATOR
 #AZURE_COSMOS_ENDPOINT=https://localhost:8081/
