--- a/.env
+++ b/.env
@@ -1,9 +1,11 @@
 BASENAME=memealyzerdev
+REGION=westus2
+FAILOVER_REGION=eastus2
 
 # TERRAFORM VARS
 TF_VAR_basename=${BASENAME}
-TF_VAR_location=westus2
-TF_VAR_failover_location=eastus2
+TF_VAR_location=${REGION}
+TF_VAR_failover_location=${FAILOVER_REGION}
 
 # SCRIPT VARS
 AZURE_AKS_CLUSTER_NAME=${BASENAME}aks
