--- a/pac/net/tye/tye.template.yaml
+++ b/pac/net/tye/tye.template.yaml
@@ -17,7 +17,7 @@ services:
         containerPort: 10002
         protocol: http
     tags:
-      - dev
+      - local
   - name: memealyzernetwebapp
     project: ${ROOT}/src/net/WebApp/WebApp.csproj
     bindings:
@@ -26,9 +26,8 @@ services:
     env_file:
       - ${DOTENV_FILENAME}
     tags:
-      - dev
-      - staging
-      - prod
+      - local
+      - cloud
   - name: memealyzernetapi
     project: ${ROOT}/src/net/Api/Api.csproj
     bindings:
@@ -37,27 +36,25 @@ services:
     env_file: 
       - ${DOTENV_FILENAME}
     tags:
-      - dev
-      - staging
-      - prod
+      - local
+      - cloud
   - name: memealyzernetfunction
     azureFunction: ${ROOT}/src/net/Services/Functions/
     bindings:
       - port: 3080
         protocol: http
     tags:
-      - dev
+      - local
   - name: memealyzernetqueueservice
     project: ${ROOT}/src/net/Services/QueueService/QueueService.csproj
     env_file: 
     - ${DOTENV_FILENAME}
     tags:
-      - dev
-      - staging
-      - prod
+      - local
+      - cloud
 
 ingress:
-  - name: ingressdev
+  - name: ingresslocal
     rules:
       - path: /
         service: memealyzernetwebapp
@@ -77,7 +74,7 @@ ingress:
         service: memealyzernetfunction
         preservePath: true
     tags:
-      - dev
+      - local
   - name: ingress
     rules:
       - path: /
@@ -95,5 +92,4 @@ ingress:
         service: memealyzernetapi
         preservePath: true
     tags:
-      - staging
-      - prod
+      - cloud
