--- a/.github/workflows/tye-staging-deploy.yml
+++ b/.github/workflows/tye-staging-deploy.yml
@@ -70,6 +70,7 @@ jobs:
         pushd $GITHUB_WORKSPACE/pac/net/tye
         sh genfiles.sh
         sh $GITHUB_WORKSPACE/scripts/genappsettings.sh
+        kubectl apply -f https://aka.ms/tye/ingress/deploy
         tye deploy tye.yaml -v Debug --tags ${{ env.WORKSPACE }}
         popd
 
